# FinanceArenaQA

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_agent.py  dev.ipynb  environment.yml  pyproject.toml  setup.py  test_benchmark_fixed.py  test_cli_fix.py  test_financial_question.py  test_fixes.py  test_sync_fix.py
config/: context_patterns.yaml  model_config.json
docs/: agent-workflow.md  agent_workflow_documentation.md  ollama_setup.md  project_document.md
results/: financeqa_full_evaluation_test_20250914_171802.json  financeqa_quick_evaluation_test_2_20250914_170554.json  financeqa_quick_evaluation_test_2_20250914_170641.json  financeqa_quick_evaluation_test_50_20250914_142626.json  financeqa_quick_evaluation_test_50_20250914_142808.json  financeqa_quick_evaluation_test_50_20250914_144343.json  financeqa_quick_evaluation_test_50_20250914_144523.json  financeqa_quick_evaluation_test_50_20250914_144623.json  financeqa_quick_evaluation_test_50_20250914_145357.json  financeqa_quick_evaluation_test_50_20250914_151412.json  financeqa_quick_evaluation_test_50_20250914_171212.json  qwen3_basic_results_full_test_20250918_233038_llm_evaluated_20250919_010759.json  qwen3_financial_agent_financeqa_full_llm_evaluated_20250923_004609.json
scripts/: download_financeqa.py  setup_data.sh
src/: __init__.py
tasks/: prd-benchmark-runner-separation.md  prd-concurrent-evaluation-system.md  prd-context-aware-reasoning-improvement.md  prd-financeqa-accuracy-improvement.md  prd-financeqa-ai-agent.md  prd-llm-evaluation-system.md  tasks-prd-benchmark-runner-separation.md  tasks-prd-context-aware-reasoning-improvement.md  tasks-prd-financeqa-accuracy-improvement.md  tasks-prd-financeqa-ai-agent.md  tasks-prd-llm-evaluation-system.md
tests/: __init__.py
(+34 files in other folders)
